--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
+
+# Code Runner temporary file
+tempCodeRunnerFile.js
